--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
   "name": "ts-inline",
-  "version": "0.1.0",
-  "description": "TypeScript compiler extension for better debugging messages",
+  "version": "0.1.8",
+  "description": "TypeScript compiler extension for inlining methods",
   "author": {
     "name": "Declan White",
     "email": "ts-inline@qn.design"
   },
   "license": "MIT",
   "files": [
-    "dist"
+    "runtime.js",
+    "runtime.d.ts",
+    "transformer.js",
+    "transformer.d.ts"
   ],
+  "main": "ffs-i-hate-js-and-node-and-this-whole-ecosystem.js",
+  "exports": {
+    "./transformer": "./transformer.js",
+    "./runtime": "./runtime.js"
+  },
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf runtime.js runtime.d.ts transformer.js transformer.d.ts",
     "build": "tsc",
     "prepare": "npm run build",
     "test": "jest"
   },
+  "preferDev": true,
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "browser-util-inspect": "^0.2.0",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.0.0",
+    "ts-transformer-testing-library": "file:../ts-transformer-testing-library",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "ts-clone-node": "^0.3.24"
+  },
+  "peerDependencies": {
     "typescript": "^4.2.4"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "preferDev": true,
-  "dependencies": {
-    "@wessberg/ts-clone-node": "^0.3.19",
-    "browser-util-inspect": "^0.2.0",
-    "ts-transformer-testing-library": "file:../ts-transformer-testing-library"
   }
 }
