--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "ES6",
     "lib": [
       "ES2019"
     ],
     "declaration": true,
-    "outDir": "./dist",
+    "outDir": "./",
     // Preferences
     "strict": true,
     "noImplicitAny": true,
